--- a/templates/detail.html
+++ b/templates/detail.html
@@ -57,11 +57,13 @@
             display: flex;
             padding: 0px 0px 0px 0px;
             text-align: center;
+            justify-content: center;
         }
 
         .imageArea>img {
             /* 메인 프로필 이미지 관련 css */
             margin: 0 auto;
+        
 
 
         }
@@ -95,7 +97,7 @@
 
         .main4>.col-12 {
             /* 방명록 영역별 관련 css */
-            border: 1px solid black;
+            /* border: 1px solid black; */
             height: 300px;
         }
 
@@ -108,6 +110,8 @@
             border-radius: 50%;
             object-fit: cover;
             overflow: hidden;
+            display: flex;
+        justify-content: center;
         }
 
         .userImgArea>img {
@@ -132,7 +136,14 @@
             overflow: scroll;
         }
 
+        .userCommentArea::-webkit-scrollbar {
+            display: none;
+        }
+
         .col-6 {
+            border: none;
+        }
+        .commentsArea{
             border: none;
         }
     </style>
@@ -206,53 +217,59 @@
             });
         }
 
+
         function show_comments() {
-            fetch('/comments/all/'+profile_Id).then((res) => res.json()).then((data) => {
-                let rows = data['result']
-                console.log(rows)
-                rows.forEach((e)=>{
-                    let writerProfileId = e['writerId']
-                    fetch('/writerProfile/'+writerProfileId).then((res) => res.json()).then((data) => {
-                        console.log(data)
-                    })
-                })
-                // $('#commentsArea').empty()
-                // rows.forEach((e) => {
-                //     let userid = e['userid']
-                //     let name = e['name']
-                //     let field = e['field']
-                    
-                //     let temp_html;
-                    
-                //         temp_html = `<div class="row" style="margin-top: 10px">
-                //                         <div class="col-12" style="width: 95%; margin: 0 auto">
-                //                             <div class="row">
-                //                                 <div class="col-2 userImgArea">
-
-                //                                 </div>
-                //                                 <div class="col-10 userNameArea">이름</div>
-                //                             </div>
-                //                         </div>
-                //                         <hr style="
-                //                     width: 95%;
-                //                     margin: 0 auto;
-                //                     margin-top: 20px;
-                //                     margin-bottom: 20px;
-                //                     " />
-                //                         <div class="col-12 userCommentArea" style="border: 1px solid black">
-                //                             <p>
-                //                                 ${commentText}
-                //                             </p>
-                //                         </div>
-                //                     </div>
-                //                 </div>`
-                            
-
-
-                //     $('#commentsArea').append(temp_html)
-                // })
-            })
+            $("#commentsArea").empty();
+            fetch("/comments/all/" + profile_Id)
+                .then((res) => res.json())
+                .then((data) => {
+                    let rows = data["result"];
+                    let commentText;
+                    let writerName;
+                    let writerImage;
+                    console.log(rows);
+                    rows.forEach((e) => {
+                        let temp_html = '';
+                        
+                        let writerProfileId = e["writerId"];
+                        fetch("/writerProfile/" + writerProfileId)
+                            .then((res) => res.json())
+                            .then((data) => {
+                                writerName = data["result"]["name"];
+                                writerImage = data["result"]["image"];
+                                commentText = e["commentText"];
+                                temp_html = `
+                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid black">
+        <!-- 여기서부터 방명록 코드 반복시작-->
+        <div class="row" style="margin-top: 10px; ">
+          <div class="col-12" style="width: 95%; margin: 0 auto">
+            <div class="row">
+              <div class="col-2 userImgArea">
+                <img src="${writerImage}"/>
+                </div>
+              <div class="col-10 userNameArea">${writerName}</div>
+            </div>
+          </div>
+          <hr
+            style="
+              width: 95%;
+              margin: 0 auto;
+              margin-top: 20px;
+              margin-bottom: 20px;
+            "
+          />
+          <div class="col-12 userCommentArea">
+            <p>${commentText}
+            </p>
+          </div>
+        </div>
+      </div>`;
+        $("#commentsArea").append(temp_html);
+                        });
+                });
+            });
         }
+
 
     </script>
 </head>
@@ -288,7 +305,8 @@
     <div class="row main2">
         <!-- 편집버튼 영역 시작-->
         <div class="col-12 editBtnArea" id="editProfile">
-            <button type="button" class="btn btn-primary" onClick="location.href=document.location.href + '/update'">프로필 편집</button>
+            <button type="button" class="btn btn-primary" onClick="location.href=document.location.href + '/update'">프로필
+                편집</button>
             <button type="button" class="btn btn-outline-danger" onClick="delete_profile()">프로필 삭제</button>
         </div>
     </div>
@@ -338,7 +356,7 @@
                 <div class="col-12" style="width: 95%; margin: 0 auto">
                     <div class="row">
                         <div class="col-2 userImgArea">
-
+                            <img src="${writerImage}">
                         </div>
                         <div class="col-10 userNameArea">이름</div>
                     </div>
@@ -384,86 +402,85 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <!-- 여기서부터 방명록 코드 반복 끝-->
+            <!-- 여기서부터 방명록 코드 반복 끝-->
+            <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
+                <div class="row" style="margin-top: 10px;">
+                    <div class="col-12" style="width: 95%; margin:0 auto">
+                        <div class="row">
+                            <div class="col-2 userImgArea">
 
-        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
-            <div class="row" style="margin-top: 10px;">
-                <div class="col-12" style="width: 95%; margin:0 auto">
-                    <div class="row">
-                        <div class="col-2 userImgArea">
-
-                        </div>
-                        <div class="col-10 userNameArea">
-                            이름
+                            </div>
+                            <div class="col-10 userNameArea">
+                                이름
+                            </div>
                         </div>
                     </div>
-                </div>
-                <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
-                <div class="col-12 userCommentArea" style="border:1px solid black">
-                    <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                    </p>
-                </div>
-            </div>
-        </div> <!-- 여기서부터 방명록 코드 반복 끝-->
-        <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
-            <div class="row" style="margin-top: 10px;">
-                <div class="col-12" style="width: 95%; margin:0 auto">
-                    <div class="row">
-                        <div class="col-2 userImgArea">
-
-                        </div>
-                        <div class="col-10 userNameArea">
-                            이름
-                        </div>
+                    <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
+                    <div class="col-12 userCommentArea" style="border:1px solid black">
+                        <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        </p>
                     </div>
                 </div>
-                <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
-                <div class="col-12 userCommentArea" style="border:1px solid black">
-                    <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                        방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
-                    </p>
+            </div> <!-- 여기서부터 방명록 코드 반복 끝-->
+            <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
+                <div class="row" style="margin-top: 10px;">
+                    <div class="col-12" style="width: 95%; margin:0 auto">
+                        <div class="row">
+                            <div class="col-2 userImgArea">
+
+                            </div>
+                            <div class="col-10 userNameArea">
+                                이름
+                            </div>
+                        </div>
+                    </div>
+                    <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
+                    <div class="col-12 userCommentArea" style="border:1px solid black">
+                        <p>방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                            방명록 글은 여기로 불러주시면 됩니다. 가나다라마바사아자차카타파하 abcdefghijklmnopqrstuvwxyz
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </div> <!-- 여기서부터 방명록 코드 반복 끝-->
-    </div> <!-- 방명록 영역 끝 -->
+            </div> <!-- 여기서부터 방명록 코드 반복 끝-->
+        </div> <!-- 방명록 영역 끝 -->
+    </div>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
