--- a/templates/detail.html
+++ b/templates/detail.html
@@ -287,7 +287,12 @@
   <body>
     <div id="result_profileId" style="display: none">"{{profileId}}"</div>
     <div class="row">
+        <div class="col-6 header" id="profile-head">
             <img src="/static/images/logo.png" onClick="location.href='/'" />
+            </div>
+            <div class="col-6 btn">
+            <button type="button" class="btn btn-primary" onclick="logOutHandler()">로그아웃</button>
+            </div>
     </div>
     <!-- 최상단 로고, 회원관련 영역 끝-->
     <div class="row main">
